ressources/production/apps/wallabag/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wallabag
  name: wallabag-svc
  namespace: wallabag
#  annotations:
#    dev.okteto.com/auto-ingress: "true"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: wallabag
