ressources/production/apps/wallabag/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: wallabag
  labels:
    app: wallabag
  name: wallabag-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - secretName: wallabag-eighty-three-me-tls
      hosts:
        - wallabag.eighty-three.me
  rules:
  - host: wallabag.eighty-three.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wallabag-svc
            port:
              number: 80
